--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="yandex-verification" content="fe206e47ce393798" />
         <title> Семь чудес земли опокской </title>
         <link rel="stylesheet" href="Style/tyle.css">
     </head>
